--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
-    "react-native": "0.72.7"
+    "react-native": "0.72.7",
+    "react-native-config": "^1.5.1",
+    "react-native-mmkv": "^2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
