--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-background-fetch": "^4.2.1",
     "react-native-config": "^1.5.1",
     "react-native-mmkv": "^2.11.0"
   },
