--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-background-fetch": "^4.2.1",
