--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.72.7",
     "react-native-background-fetch": "^4.2.1",
     "react-native-config": "^1.5.1",
-    "react-native-mmkv": "^2.11.0"
+    "react-native-mmkv": "^2.11.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
