Setup android release settings

--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,8 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-8.0.1-all.zip
 networkTimeout=10000
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+MYAPP_RELEASE_STORE_FILE=demo.keystore
+MYAPP_RELEASE_KEY_ALIAS=demo
+MYAPP_RELEASE_STORE_PASSWORD=topnews
+MYAPP_RELEASE_KEY_PASSWORD=topnews
